$Id$

2016-01-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: Extra warning entry for buggy Corsair Force LS
	  (ticket #628)

2016-01-01  Christian Franke  <franke@computer.org>

	Happy New Year! Update copyright year in version info.

2015-12-19  Christian Franke  <franke@computer.org>

	Makefile.am: Fix path of 'smart-pkg-uninstall' (Regression from r4190).

	update-smart-drivedb.8.in: Fix platform specific formatting.

2015-12-18  Alex Samorukov <samm@os2.kiev.ua>

	os_netbsd.cpp, os_openbsd.cpp: fix ioctl returtn value check
	os_darwin.cpp: fix error handling
	os_darwin: use /usr/local/ prefix to install on 10.11 (El Capitan)

2015-12-16  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: stop tape drive looking for Solid State media
	log page (ticket #314).

2015-12-14  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: fix compiler warning for is_tape. Clean code around
	handling of tape drives.

2015-12-14  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Intel 320 Series SSDs: 1.8" microSATA
	- Intel 53x and Pro 2500 Series SSDs: Rename, add 535 (ticket #625),
	  add Pro 2500
	- Intel 730 and DC S35x0/3610/3700 Series SSDs: Rename,
	  add S3510/3610, 1.2TB, 1.6TB
	- USB: LaCie (0x059f:0x106f) (ticket #624)
	- USB: WD My Passport (0x1058:0x071a, 0x1058:0x0816)
	- USB: Initio (0x13fd:0x1650)
	- USB: Unknown (0xabcd:0x6103)

	update-smart-drivedb.in: Add '-s SMARTCTL' option.
	update-smart-drivedb.8.in: Document it.

2015-12-07  Christian Franke  <franke@computer.org>

	configure.ac: Append 'svn' to list of download tools.

	update-smart-drivedb.in: Use HTTPS download by default.
	Add options '-t TOOL', '-u LOCATION', '--cacert FILE',
	'--capath DIR', '--insecure' and '--dryrun'.
	Add 'svn' as new download tool.
	Ignore differences in SVN Id string (re-added).
	Remove usage of 'which' command.

	update-smart-drivedb.8.in: Document the new options.

2015-11-23  Christian Franke  <franke@computer.org>
